# desktop-control-py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  启动桌面控制MCP.bat  检查桌面控制环境.bat  运行桌面控制冒烟测试.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: default.toml
desktop_control_py/: __init__.py  __main__.py  action_flow.py  artifacts.py  browser_flow.py  checks.py  cli.py  computer_flow.py  config.py  engine.py  errors.py  logging_utils.py  models.py  safety.py  server.py  service.py  smoke.py  tool_registration.py
desktop_control_py/backends/: __init__.py  protocol.py  win32.py
scripts/: check_environment.py  smoke_test.py
tests/: test_audit_tools.py  test_browser_tools.py  test_cli.py  test_computer_tools.py  test_config.py  test_engine.py  test_launchers.py  test_logging.py  test_public_defaults.py  test_safety.py  test_safety_tools.py  test_server.py  test_snapshot_tools.py  test_win32_utils.py
